--- a/Projeto2_layout.ipynb
+++ b/Projeto2_layout.ipynb
@@ -11,16 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nome: _____\n",
+    "Nome:Luís Filipe Loureiro\n",
     "\n",
-    "Nome: _____"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Serão permitidos grupos de três pessoas, mas com uma rubrica mais exigente. Grupos deste tamanho precisarão fazer um questionário de avaliação de trabalho em equipe"
+    "Nome: João Bueno\n"
    ]
   },
   {
@@ -54,7 +47,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -76,26 +68,37 @@
     "___\n",
     "## Autenticando no  Twitter\n",
     "\n",
-    "* Conta: ***[Preencha aqui o id da sua conta. Ex: @fulano ]***"
+    "* Conta: @luisfloureiro1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'auth.pass'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-f2eec1c4b04c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#leitura do arquivo no formato JSON\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'auth.pass'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfp\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'auth.pass'"
+     ]
+    }
+   ],
    "source": [
     "#Dados de autenticação do twitter:\n",
     "\n",
-    "#Coloque aqui o identificador da conta no twitter: @fulano\n",
+    "#Coloque aqui o identificador da conta no twitter: @luisfloureiro1\n",
     "\n",
     "#leitura do arquivo no formato JSON\n",
-    "with open('auth.pass') as fp:    \n",
+    "with open('.gitignore') as fp:    \n",
     "    data = json.load(fp)\n",
     "\n",
     "#Configurando a biblioteca. Não modificar\n",
@@ -383,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
