--- a/Projeto2_layout.ipynb
+++ b/Projeto2_layout.ipynb
@@ -79,26 +79,14 @@
      "outputs_hidden": true
     }
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'auth.pass'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-f2eec1c4b04c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#leitura do arquivo no formato JSON\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'auth.pass'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfp\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'auth.pass'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Dados de autenticação do twitter:\n",
     "\n",
     "#Coloque aqui o identificador da conta no twitter: @luisfloureiro1\n",
     "\n",
     "#leitura do arquivo no formato JSON\n",
-    "with open('.gitignore') as fp:    \n",
+    "with open('auth.pass') as fp:    \n",
     "    data = json.load(fp)\n",
     "\n",
     "#Configurando a biblioteca. Não modificar\n",
@@ -125,7 +113,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -133,12 +120,12 @@
    "outputs": [],
    "source": [
     "#Produto escolhido:\n",
-    "produto = 'Johnny Depp'\n",
+    "produto = 'Volkswagen'\n",
     "\n",
     "#Quantidade mínima de mensagens capturadas:\n",
-    "n = 500\n",
+    "n = 750\n",
     "#Quantidade mínima de mensagens para a base de treinamento:\n",
-    "t = 300\n",
+    "t = 500\n",
     "\n",
     "#Filtro de língua, escolha uma na tabela ISO 639-1.\n",
     "lang = 'pt'"
@@ -155,7 +142,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -189,7 +175,6 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
