Base de dados feita- falta fazer a relevância na unha

--- a/Projeto2_layout.ipynb
+++ b/Projeto2_layout.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -120,10 +120,10 @@
    "outputs": [],
    "source": [
     "#Produto escolhido:\n",
-    "produto = 'Volkswagen'\n",
+    "produto = 'Golf'\n",
     "\n",
     "#Quantidade mínima de mensagens capturadas:\n",
-    "n = 750\n",
+    "n = 1600\n",
     "#Quantidade mínima de mensagens para a base de treinamento:\n",
     "t = 500\n",
     "\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -154,14 +154,17 @@
     "#Inicia a captura, para mais detalhes: ver a documentação do tweepy\n",
     "i = 1\n",
     "msgs = []\n",
+    "\n",
     "for msg in tweepy.Cursor(api.search, q=produto, lang=lang, tweet_mode=\"extended\").items():    \n",
     "    msgs.append(msg.full_text.lower())\n",
     "    i += 1\n",
     "    if i > n:\n",
     "        break\n",
     "\n",
+    "\n",
     "#Embaralhando as mensagens para reduzir um possível viés\n",
-    "shuffle(msgs)"
+    "shuffle(list(set(msgs)))\n",
+    "\n"
    ]
   },
   {
@@ -173,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -188,10 +191,10 @@
     "    writer = pd.ExcelWriter('{0}.xlsx'.format(produto))\n",
     "\n",
     "    #divide o conjunto de mensagens em duas planilhas\n",
-    "    dft = pd.DataFrame({'Treinamento' : pd.Series(msgs[:t])})\n",
+    "    dft = pd.DataFrame({'Treinamento' : pd.Series(list(set(msgs))[:t])})\n",
     "    dft.to_excel(excel_writer = writer, sheet_name = 'Treinamento', index = False)\n",
     "\n",
-    "    dfc = pd.DataFrame({'Teste' : pd.Series(msgs[t:])})\n",
+    "    dfc = pd.DataFrame({'Teste' : pd.Series(list(set(msgs))[t:])})\n",
     "    dfc.to_excel(excel_writer = writer, sheet_name = 'Teste', index = False)\n",
     "\n",
     "    #fecha o arquivo\n",
