--- a/Projeto2_layout.ipynb
+++ b/Projeto2_layout.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,29 +306,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "irrelevantes=tweets_clean.loc[tweets01.Relevancia==0]\n",
+    "irrelevantes=tweets_clean.loc[tweets_clean.Relevancia==0]\n",
     "\n",
-    "neutros=tweets_clean.loc[tweets01.Relevancia==1]\n",
+    "neutros=tweets_clean.loc[tweets_clean.Relevancia==1]\n",
     "\n",
-    "relevantes=tweets_clean.loc[tweets01.Relevancia==2]\n"
+    "relevantes=tweets_clean.loc[tweets_clean.Relevancia==2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9999999999999999"
+       "0.9999999999999998"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
     "for neutro in neutros.tweet:\n",
     "    N.append(neutro)\n",
     "\n",
-    "N01=', '.join(N)\n",
+    "N01=','.join(N)\n",
     "serie_neutro=pd.Series(N01.split())\n",
     "tabela_neutro=serie_neutro.value_counts()\n",
     "tabela_neutro_relativa = serie_neutro.value_counts(True)\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "1.0"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
     "for irrelevante in irrelevantes.tweet:\n",
     "    I.append(irrelevante)\n",
     "    \n",
-    "I01=', '.join(I)\n",
+    "I01=','.join(I)\n",
     "serie_irrelevante=pd.Series(I01.split())\n",
     "tabela_irrelevante=serie_irrelevante.value_counts()\n",
     "tabela_irrelevante_relativa = serie_irrelevante.value_counts(True)\n",
@@ -375,16 +375,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9999999999999999"
+       "1.0"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
     "for relevante in relevantes.tweet:\n",
     "    R.append(relevante)\n",
     "    \n",
-    "R01=', '.join(R)\n",
+    "R01=','.join(R)\n",
     "serie_relevante=pd.Series(R01.split())\n",
     "tabela_relevante=serie_relevante.value_counts()\n",
     "tabela_relevante_relativa = serie_relevante.value_counts(True)\n",
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,17 +462,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "frase='muito bom o golf novo'\n",
+    "frase=frase.lower()\n",
+    "frase=cleanup(frase.lower())\n",
+    "frase=pd.Series(frase.split())\n",
+    "lista_frase=list(frase)\n",
+    "x=1\n",
+    "y=1\n",
+    "z=1\n",
+    "\n",
+    "\n",
+    "for palavra in lista_frase:\n",
+    "    p=(lista_frase.count(palavra))/(len(lista_frase))\n",
+    "    if palavra not in tabela_neutro_relativa or palavra not in tabela_relevante_relativa or palavra not in tabela_irrelevante_relativa:\n",
+    "        palavra=1\n",
+    "    else:\n",
+    "        x*=tabela_neutro_relativa[palavra]/p\n",
+    "        y*=tabela_relevante_relativa[palavra]/p\n",
+    "        z*=tabela_irrelevante_relativa[palavra]/p"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0219468539828806\n",
+      "0.038928215635872815\n",
+      "0.023072144642812046\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)\n",
+    "print(y)\n",
+    "print(z)"
+   ]
   },
   {
    "cell_type": "code",
