--- a/Projeto2_layout.ipynb
+++ b/Projeto2_layout.ipynb
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,20 +319,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9999999999999998"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "N=[]\n",
     "for neutro in neutros.tweet:\n",
@@ -341,26 +330,14 @@
     "N01=','.join(N)\n",
     "serie_neutro=pd.Series(N01.split())\n",
     "tabela_neutro=serie_neutro.value_counts()\n",
-    "tabela_neutro_relativa = serie_neutro.value_counts(True)\n",
-    "tabela_neutro_relativa.sum()"
+    "tabela_neutro_relativa = serie_neutro.value_counts(True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "I=[]\n",
     "for irrelevante in irrelevantes.tweet:\n",
@@ -369,26 +346,14 @@
     "I01=','.join(I)\n",
     "serie_irrelevante=pd.Series(I01.split())\n",
     "tabela_irrelevante=serie_irrelevante.value_counts()\n",
-    "tabela_irrelevante_relativa = serie_irrelevante.value_counts(True)\n",
-    "tabela_irrelevante_relativa.sum()"
+    "tabela_irrelevante_relativa = serie_irrelevante.value_counts(True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "R=[]\n",
     "for relevante in relevantes.tweet:\n",
@@ -397,13 +362,12 @@
     "R01=','.join(R)\n",
     "serie_relevante=pd.Series(R01.split())\n",
     "tabela_relevante=serie_relevante.value_counts()\n",
-    "tabela_relevante_relativa = serie_relevante.value_counts(True)\n",
-    "tabela_relevante_relativa.sum()"
+    "tabela_relevante_relativa = serie_relevante.value_counts(True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,49 +426,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "frase='muito bom o golf novo'\n",
-    "frase=frase.lower()\n",
-    "frase=cleanup(frase.lower())\n",
-    "frase=pd.Series(frase.split())\n",
-    "lista_frase=list(frase)\n",
-    "x=1\n",
-    "y=1\n",
-    "z=1\n",
-    "\n",
-    "\n",
-    "for palavra in lista_frase:\n",
-    "    p=(lista_frase.count(palavra))/(len(lista_frase))\n",
-    "    if palavra not in tabela_neutro_relativa or palavra not in tabela_relevante_relativa or palavra not in tabela_irrelevante_relativa:\n",
-    "        palavra=1\n",
-    "    else:\n",
-    "        x*=tabela_neutro_relativa[palavra]/p\n",
-    "        y*=tabela_relevante_relativa[palavra]/p\n",
-    "        z*=tabela_irrelevante_relativa[palavra]/p"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0219468539828806\n",
-      "0.038928215635872815\n",
-      "0.023072144642812046\n"
+      "Relevante\n"
      ]
     }
    ],
    "source": [
-    "print(x)\n",
-    "print(y)\n",
-    "print(z)"
+    "frase=''\n",
+    "frase=frase.lower()\n",
+    "frase=cleanup(frase.lower())\n",
+    "frase=pd.Series(frase.split())\n",
+    "lista_frase=list(frase)\n",
+    "\n",
+    "x=1\n",
+    "y=1\n",
+    "z=1\n",
+    "\n",
+    "\n",
+    "for word in lista_frase:\n",
+    "    p=(lista_frase.count(word))/(len(lista_frase))\n",
+    "    if word not in tabela_neutro_relativa or word not in tabela_relevante_relativa or word not in tabela_irrelevante_relativa:\n",
+    "        palavra=1\n",
+    "    else:\n",
+    "        x*=tabela_neutro_relativa[word]/p\n",
+    "        y*=tabela_relevante_relativa[word]/p\n",
+    "        z*=tabela_irrelevante_relativa[word]/p\n",
+    "        \n",
+    "if x>y and x>z:\n",
+    "    print('Neutro') \n",
+    "elif y>x and y>z:\n",
+    "    print('Relevante')\n",
+    "elif z>x and z>y:\n",
+    "    print('Irrelevante') "
    ]
   },
   {
